--- a/style_krakow.css
+++ b/style_krakow.css
@@ -60,6 +60,7 @@ figure {
 
 figure img {
     width: 80%;
+    border: 1px solid #ccc;
     border-radius: 8px;
 }
 
@@ -118,7 +119,7 @@ footer p {
 }
 /* style form kontakty */
 
-input[type=text], select {
+input[type=text], select, textarea {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
